external-crates/move/crates/move-compiler/tests/move_check/parser/unexpected_token_after_ability_modifier.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unexpected_token_after_ability_modifier.move:4:25
  │
4 │     struct Foo has copy & drop {}
  │                         ^
  │                         │
  │                         Unexpected '&'
  │                         Expected one of: ',', '{', '(', or ';'
